# agentguard

./: .dockerignore  .env.example  .gitignore  AGENTGUARD_BUILD_DOC.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.json  tsconfig.base.json
apps/api/: Dockerfile  package.json  tsconfig.json
apps/api/src/: config.ts  index.ts  logger.ts  pubsub.ts  types.ts  ws.ts
apps/api/src/db/: client.ts  memstore.ts  migrate.ts  repo.ts  schema.sql
apps/sdk/python/: CHANGELOG.md  README.md  pyproject.toml
apps/sdk/python/agentguard/: __init__.py  circle.py  client.py  core.py  exceptions.py  models.py  policy.py
apps/sdk/python/tests/: conftest.py  test_client.py  test_core.py  test_exceptions.py  test_models.py  test_policy.py
apps/web/: next.config.mjs  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: AgentFeed.tsx  AgentRoster.tsx  AppShell.tsx  ArchitectureDiagram.tsx  Avatar.tsx  BigStatCard.tsx  HeroBanner.tsx  HeroMetric.tsx  IncidentCard.tsx  KillSwitchButton.tsx  NavBar.tsx  PaymentCounter.tsx  PaymentDetailModal.tsx  Sidebar.tsx  Sparkline.tsx  StatCard.tsx  ThroughputChart.tsx
apps/web/lib/: api.ts
contracts/: README.md  deploy-notes.md
contracts/script/: deploy.py
contracts/src/: IdentityRegistry.vy  ReputationRegistry.vy  SpendingLimiter.vy  ValidationRegistry.vy
contracts/src/interfaces/: IIdentityRegistry.vyi
docs/: ARCHITECTURE.md  AgentGuard_Deck.NEW.pptx  AgentGuard_Deck.pptx  CIRCLE_FEEDBACK.md  DECK.md  POLICY_LANGUAGE.md  VIDEO_SCRIPT.md  primitives-validation.md  self-hosting.md
examples/: README.md  a2a_attack.py  claude_agent_sdk_integration.py  deposit_to_gateway.py  langchain_integration.py  legitimate_payment.py  pay_for_service.py  quickstart.py  vendor_service.py
policies/: research-agent-v1.yaml
scripts/: agent-economy.ts  build-deck.py  demo-attack.ts  evaluate-classifier.ts  generate-deployer.ts  name-wallets.ts  package.json  provision-wallets.ts  push-env-to-railway.sh  register-entity-secret.ts  register_agents_onchain.py  seed-wallets.ts  shared.ts  tsconfig.json
scripts/attacks/: double-payment.ts  gradual-drain.ts  new-recipient.ts  rogue-employee.ts  supply-chain.ts
tests/: injection_samples.json
(+16 files in other folders)
